test/bpmn/invalid/unknown-boundary-event.bpmn
<definitions id="test">
  <process id="unknownBoundaryEventTest" isExecutable="true">
    <startEvent id="startEvent">
      <outgoing>f1</outgoing>
    </startEvent>
    <sequenceFlow id="f1" sourceRef="startEvent" targetRef="serviceTask" />
    <serviceTask id="serviceTask">
      <incoming>f1</incoming>
      <outgoing>f2</outgoing>
    </serviceTask>
    <sequenceFlow id="f2" sourceRef="serviceTask" targetRef="endEventA" />
    <endEvent id="endEventA">
      <incoming>f2</incoming>
    </endEvent>
    <boundaryEvent id="unknownBoundaryEvent" attachedToRef="serviceTask">
      <outgoing>f3</outgoing>
    </boundaryEvent>
    <sequenceFlow id="f3" sourceRef="unknownBoundaryEvent" targetRef="endEventB" />
    <endEvent id="endEventB">
      <incoming>f3</incoming>
    </endEvent>
  </process>
</definitions>
